<resources>
    <string name="app_name" translatable="false">SwitchAI</string>
    <string name="app_settings">Assistant settings</string>
    <string name="accio">Accio</string>
    <string name="alexa">Alexa</string>
    <string name="alice">Alice</string>
    <string name="bixby">Bixby</string>
    <string name="breeno">Breeno</string>
    <string name="chatgpt">ChatGPT</string>
    <string name="claude">Claude</string>
    <string name="conduit">Conduit</string>
    <string name="copilot">Copilot</string>
    <string name="deepseek">DeepSeek</string>
    <string name="dicio">Dicio</string>
    <string name="dola">Dola</string>
    <string name="doubao">Doubao</string>
    <string name="euria">Euria</string>
    <string name="gemini">Gemini</string>
    <string name="grok">Grok</string>
    <string name="home">Home Assistant</string>
    <string name="home_minimal">Home Minimal</string>
    <string name="ima">ima</string>
    <string name="kimi">Kimi</string>
    <string name="kruti">Kruti</string>
    <string name="liner">Liner</string>
    <string name="lumo">Lumo</string>
    <string name="luzia">Luzia</string>
    <string name="manus">Manus</string>
    <string name="marusya">Marusya</string>
    <string name="meta">Meta AI</string>
    <string name="minimax">MiniMax</string>
    <string name="miromind">MiroMind</string>
    <string name="monica">Monica</string>
    <string name="moto">Moto AI</string>
    <string name="oxproxion">oxproxion</string>
    <string name="perplexity">Perplexity</string>
    <string name="pi">Pi</string>
    <string name="poe">Poe</string>
    <string name="qingyan">Qingyan</string>
    <string name="qwen">Qwen</string>
    <string name="spark">Spark</string>
    <string name="stepfun">StepFun</string>
    <string name="ultimate_alexa">Ultimate Alexa</string>
    <string name="venice">Venice AI</string>
    <string name="vibe">Vibe</string>
    <string name="wenxiaoyan">Wenxiaoyan</string>
    <string name="xiaoai">XiaoAI</string>
    <string name="you">You</string>
    <string name="yuanbao">Yuanbao</string>
    <string name="zapia">Zapia</string>
    <string name="pref_screen_appearance">Appearance</string>
    <string name="pref_screen_selector">Selector</string>
    <string name="pref_screen_voice_input">Voice input</string>
    <string name="pref_screen_accessibility">Accessibility</string>
    <string name="pref_screen_shortcuts">Shortcuts</string>
    <string name="pref_screen_about">About</string>
    <string name="pref_category_manager">Manager</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_digital_assistant">Digital assistant</string>
    <string name="pref_setup_digital_assistant">Setup digital assistant</string>
    <string name="pref_setup_digital_assistant_summary">Set SwitchAI as default digital assistant app</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_key_color">Key color</string>
    <string name="pref_theme_palette_style">Palette style</string>
    <string name="pref_theme_color_spec">Color specification</string>
    <string name="pref_theme_blur">Blur</string>
    <string name="pref_topbar_blur_style">Top bar blur style</string>
    <string name="pref_selector">Use assistant selector</string>
    <string name="pref_selector_summary">When enabled, select an assistant each time you start the device\'s digital assistant. Otherwise, the <b>Digital Assistant</b> option will be used with the currently set assistant</string>
    <string name="pref_selector_manager_components">Manage components</string>
    <string name="pref_selector_manager_components_summary">Choose which components elements are displayed in the selector</string>
    <string name="pref_selector_manager_dynamic">Dynamic manager</string>
    <string name="pref_selector_manager_dynamic_summary_off">Manage which assistants are displayed in the selector dynamically based on app availability</string>
    <string name="pref_selector_manager_dynamic_summary_on">Only installed assistants are shown in the selector</string>
    <string name="pref_selector_manager_manual">Manage assistants</string>
    <string name="pref_selector_manager_manual_summary">Choose which assistants are displayed in the selector</string>
    <string name="pref_selector_grid">Assistants grid</string>
    <string name="pref_selector_grid_summary">Customize assistants grid list columns</string>
    <string name="pref_voice_input">Use voice input</string>
    <string name="pref_voice_input_summary">When enabled, the voice input activity will be used instead of the main activity in supported assistants</string>
    <string name="pref_voice_input_support">Supported assistants</string>
    <string name="pref_voice_input_shizuku">Use Shizuku permission</string>
    <string name="pref_voice_input_shizuku_summary">Use Shizuku to enable voice input for specific assistants and improve usability</string>
    <string name="pref_accessibility_vibration">Vibrate when opening</string>
    <string name="pref_accessibility_vibration_summary">Provides haptic feedback when opening the assistant. This may be affected by system settings</string>
    <string name="pref_accessibility_sound">Sound when opening</string>
    <string name="pref_accessibility_sound_summary">Provides sound feedback when opening the assistant. May be muted by the device’s sound mode or active media playback</string>
    <string name="pref_shortcut_tile">Assistant tile</string>
    <string name="pref_shortcut_tile_summary">Add a tile to the quick settings panel for easy access to your assistants</string>
    <string name="pref_shortcut_widget">Assistant widget</string>
    <string name="pref_shortcut_widget_summary">Add a widget to your home screen for quick access to your assistants</string>
    <string name="pref_check_updates">Check for updates</string>
    <string name="pref_checking_updates">Checking for updates…</string>
    <string name="pref_wstxda" translatable="false">WSTxda</string>
    <string name="pref_developer">Developer</string>
    <string name="pref_github" translatable="false">GitHub</string>
    <string name="pref_source_code">Source code</string>
    <string name="pref_license">License</string>
    <string name="pref_license_version" translatable="false">GPL v3.0</string>
    <string name="pref_used_library">Libraries</string>
    <string name="navigate_back">Back</string>
    <string name="navigate_app_info">App info</string>
    <string name="theme_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_monet">Monet</string>
    <string name="theme_color_default">Default</string>
    <string name="theme_color_blue">Blue</string>
    <string name="theme_color_green">Green</string>
    <string name="theme_color_purple">Purple</string>
    <string name="theme_color_yellow">Yellow</string>
    <string name="theme_color_orange">Orange</string>
    <string name="theme_color_pink">Pink</string>
    <string name="theme_color_teal">Teal</string>
    <string name="theme_spec_2021">Material 3</string>
    <string name="theme_spec_2025">Material 3 Expressive</string>
    <string name="topbar_blur_gaussian">Gaussian</string>
    <string name="topbar_blur_progressive">Progressive</string>
    <string name="digital_assistant_setup_title">Default digital assistant app</string>
    <string name="digital_assistant_setup_message">In the settings, select <b>SwitchAI</b> as your default digital assistant app to quickly access the selected assistant using gestures, buttons, and more…</string>
    <string name="digital_assistant_setup_button">Set as default</string>
    <string name="digital_assistant_tutorial_title">How to use the digital assistant</string>
    <string name="assistant_tutorial_edge_gestures">Using screen edge gestures</string>
    <string name="assistant_tutorial_edge_gestures_summary">On devices using gesture navigation (Android 10+), swipe up and in from either of the bottom corners of the screen. A glowing arc will appear from the corner to confirm that the digital assistant is opening. For this to work, <b>Gesture navigation</b> must be selected as the system navigation mode in your device\’s settings</string>
    <string name="assistant_tutorial_home_button">Using the home navigation button</string>
    <string name="assistant_tutorial_home_button_summary">If your device uses the classic 3-button navigation, press and hold the center home button for a moment. This action is typically reserved to open the digital assistant. If this action performs a different function, it may have been customized by your device\’s manufacturer</string>
    <string name="assistant_tutorial_power_button">Using the power button</string>
    <string name="assistant_tutorial_power_button_summary">Many devices allow you to open the digital assistant by long-pressing the power button. If the power off/restart menu appears when you do this, the feature is likely disabled. You can often enable it in your system settings, typically under a path like <b>Settings &gt; System &gt; Gestures &gt; Press and hold power button</b></string>
    <string name="assistant_tutorial_headset_button">Using wired and bluetooth headsets</string>
    <string name="assistant_tutorial_headset_button_summary">Many wired and bluetooth headsets allow you to open the digital assistant by long-pressing the multifunction button. This button is usually used to control media playback or answer calls, but can also open the assistant depending on your headset model. Tap gestures on some wireless earbuds like double-tap may also open the digital assistant if supported and configured in app</string>
    <string name="assistant_selector_title">Select assistant</string>
    <string name="selector_search_hint">Search assistants</string>
    <string name="selector_search_empty">No assistants found</string>
    <string name="selector_category_pin">Pinned</string>
    <string name="selector_category_recent">Recently used</string>
    <string name="selector_category_all">Assistants</string>
    <string name="selector_category_not_installed">Not installed</string>
    <string name="selector_tip_reorder">To rearrange your pinned assistants, tap and hold one, then drag it to the position you prefer</string>
    <string name="selector_tip_close">Close tip</string>
    <string name="selector_component_title">Title</string>
    <string name="selector_component_search_bar">Search bar</string>
    <string name="selector_component_counter">Counter</string>
    <string name="selector_grid_title">Customize grid</string>
    <string name="selector_grid_portrait">Portrait</string>
    <string name="selector_grid_landscape">Landscape</string>
    <string name="selector_grid_columns">Columns</string>
    <string name="selector_grid_orientation">Orientation</string>
    <string name="selector_pin">Pin assistant</string>
    <string name="selector_unpin">Unpin assistant</string>
    <string name="selector_move_before">Move earlier</string>
    <string name="selector_move_after">Move later</string>
    <string name="updater_title">New update available!</string>
    <string name="updater_no_update_message">No update available</string>
    <string name="updater_no_internet_message">No internet connection</string>
    <string name="updater_generic_error_message">Something went wrong. Please try again later</string>
    <string name="updater_download_button">Download</string>
    <string name="updater_install_button">Install</string>
    <string name="updater_github_button">Open in GitHub</string>
    <string name="free_android_warn_title">Important information</string>
    <string name="assistant_label">Assistant</string>
    <string name="assistant_open">Open assistant</string>
</resources>