<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_assistant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background_material"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="12dp">

    <LinearLayout
        android:id="@+id/button_assistant"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/widget_button_material_primary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/button_assistant_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/assistant_open"
            android:src="@drawable/ic_assistant"
            android:tint="@color/widget_primary_container"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/button_assistant_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/assistant_label"
            android:textColor="@color/widget_primary_container"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_assistant_select"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:background="@drawable/widget_button_material_tertiary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/assistant_selector_title"
            android:src="@drawable/ic_select"
            android:tint="@color/widget_tertiary_container"
            tools:ignore="UseAppTint" />
    </LinearLayout>
</LinearLayout>